Fix the styling to avoid text cutoff in Special:ExternalGuidance
Bug: T295769

--- a/modules/mw.externalguidance.special/specialpage.less
+++ b/modules/mw.externalguidance.special/specialpage.less
@@ -11,8 +11,14 @@
 	ul {
 		list-style: none;
 
+		li {
+			display: flex;
+			flex-direction: row;
+			align-items: start;
+		}
+
 		div {
-			padding: 0 2.5em;
+			padding: 0 0.5em;
 		}
 	}
 
